# study_genie

./: .gitignore  GENie.pptx  README.md  makefile_bak  makefile_mini  makefile_symbol.txt  note.md
gen_build_tools/: other.txt
gen_build_tools/linux/: genie
gn_project/: genie_build_android.bat  genie_build_linux.sh  genie_build_win.bat  makefile_win
gn_project/gn_project_app/: settings.gradle
gn_project/gn_project_app/app/: CMakeLists.txt  build.gradle
gn_project/gn_project_app/app/src/main/: AndroidManifest.xml
gn_project/gn_project_app/app/src/main/cpp/: JNIEntry.cpp  and_log.h
gn_project/gn_project_app/app/src/main/java/com/heaven7/android/gn_project/app/: MainActivity.java
gn_project/gn_project_app/app/src/main/res/layout/: activity_main.xml
gn_project/gn_project_app/app/src/main/res/values/: strings.xml
gn_project/gn_project_app/gradle/wrapper/: gradle-wrapper.properties
gn_project/modules/LogModule/: log_module.cpp
gn_project/scripts/: genie.lua  gn_wrapper.lua  gn_wrapper.sln  gn_wrapper.vcxproj  gn_wrapper.vcxproj.filters  toolchain.lua
gn_project/system_wrappers/source/: set_thread_name_win.h  time_convert.cc
makefile_bases/: makefile  makefile.md
